# Elastic-Federated-Learning-Solution

./: .gitmodules  README.md  README_CN.md
docker/: Dockerfile.efls-train
docs/English/: Cloud_native_Deployment.md  Cloud_native_Deployment_CN.md  (+6 more)
efls-algo/: .gitignore  README.md
efls-console/: Dockerfile  README.md  alembic.ini  requirements.txt  run.py  start.sh
efls-data/: .gitignore  CMakeLists.txt  Dockerfile  build.sh  requirements.txt  requirements_local_client_notf.txt  requirements_local_client_tf.txt  test.sh
efls-data/cc/: hash_util.cc  hash_util.h  log.cc  log.h  time_utils.h
efls-data/cmake/: googletest.cmake  ipp.cmake
efls-data/deploy/flink/: flink_pod_template.yaml
efls-data/deploy/network/: test_grpc.sh
efls-data/deploy/quickstart/: efls_ingress.yaml  flink_pod_template.yaml  gen_crt.sh  grpc_server.yaml  ingress-nginx.yaml  nas.yaml
efls-data/deploy/redis/: redis-pod.yaml
efls-data/deploy/test/: data_join_results_test.py  data_maker.py  grpc_ingress_test.py  rsa_psi_test.py  test_pod.py
efls-data/deploy/utils/: dnsutil.yaml
efls-data/proto/: common.proto  data_join.proto
efls-data/test/: data_maker.py  test_data_join.py  test_ecc_signer.py  test_psi_speed.py  test_rpc.py  test_rsa_psi.py  test_sample_store.py  test_utils.py
efls-data/test/local_join/: __init__.py  local_data_set.py  test_data_local_join.py
efls-data/xfl-java/: pom.xml
efls-data/xfl-java/src/main/java/com/alibaba/xfl/flink/connectors/: CsvEncoder.java  CsvKeyedStreamFormat.java  RowNumberRollingPolicy.java  TfRecordEncoder.java  TfRecordKeyedStreamFormat.java  TfRecordRowBucketAssigner.java  TfRecordStreamFormat.java  Utils.java
efls-data/xfl-java/src/main/java/com/alibaba/xfl/flink/connectors/test/: TestRecordReader.java  TestTfRecordWriter.java
efls-data/xfl-java/src/main/java/org/apache/flink/runtime/fs/hdfs/: HadoopRecoverableWriter.java
efls-data/xfl-java/src/main/java/org/apache/flink/streaming/runtime/partitioner/: KeyGroupStreamPartitioner.java
efls-data/xfl/common/: argutil.py  common.py  constants.py  decorator.py  logger.py
efls-data/xfl/data/: check_sum.py  client_local.py  client_no_tf.py  connectors.py  ecdh_psi.py  functions.py  pipelines.py  rsa_psi.py  utils.py
efls-data/xfl/data/local_join/: aux_table.py  clean_job.py  sharding.py  utils.py  worker.py
efls-data/xfl/data/main/: run_data_io.py  run_data_join.py  run_local_join.py  run_wq_local_join.py
efls-data/xfl/data/psi/: ecc_signer.py  rsa_signer.py
efls-data/xfl/data/redis/: redis_lock.py  rediswq.py
efls-data/xfl/data/store/: __init__.py  etcd_kv_store.py  flink_state_kv_store.py  level_db_kv_store.py  sample_kv_store.py
efls-data/xfl/data/tfreecord/: tfrecords.proto  tfreecord.py
efls-data/xfl/k8s/: k8s_client.py  k8s_resource.py
efls-data/xfl/service/: __init__.py  data_join_client.py  data_join_server.py  nginx.py  proxy.py  thread_pool.py
efls-data/xfl/test/: data_join_test.py  k8s_test.py  test_data_join_server.py
efls-train/: CMakeLists.txt
efls-train/cc/efl/communicator/: any.h  communication_client.cc  communication_client.h  communication_service.cc  communication_service.h  communicator_ops.cc  grpc_utils.cc  grpc_utils.h  monitor.cc  monitor.h
efls-train/cc/efl/data/: federal_dataset_ops.cc  iterator_ops.cc  work_queue.cc
efls-train/cc/efl/math/: fixed_point.cc  frexp.cc  gmp_ops.cc  gmp_utils.cc  gmp_utils.h  paillier.cc
efls-train/cc/efl/stage/: stage.cc
efls-train/cc/service_discovery/: python_wrapper.cc  remote_kv.cc  remote_kv.h  remote_kv_localfs.cc  remote_kv_zookeeper.cc  remote_scheduler.cc  remote_scheduler.h  reporter.cc  reporter.h  scheduler.cc  scheduler.h  scheduler_api.cc  scheduler_api.h  scheduler_interface.h  scheduler_service.cc  scheduler_service.h
efls-train/cmake/: grpc.cmake  utils.cmake
efls-train/deploy/: __init__.py  federal_task_scheduler.py  k8s_controller.py  non_federal_task_scheduler.py  task_controller.py  xdl_submit.py
efls-train/protos/: cluster_service.proto  trainer_service.proto
efls-train/python/: setup.py
efls-train/python/efl/: __init__.py  exporter.py  lib.py  libinfo.py
efls-train/python/efl/dataio/: dataio.py  dataio_hook.py  federal_dataset.py  work_queue.py
efls-train/python/efl/example/: train.py  train_and_eval.py
efls-train/python/efl/example/criteo/: criteo_dp_follower_dense.py  criteo_dp_leader_dense.py  generate_data.py
efls-train/python/efl/example/dp_mnist/: dp_cnn.py  follower.py  leader.py  mnist_dp_cnn.py  mnist_dp_follower_cnn.py  mnist_dp_leader_cnn.py
efls-train/python/efl/example/encrypt_mnist/: encrypt_follower.py  encrypt_leader.py  generate_paillier_keypair.py
efls-train/python/efl/example/mnist/: follower.py  leader.py
efls-train/python/efl/example/paillier_mnist/: follower_dense.py  follower_weight.py  generate_data.py  leader_dense.py  leader_weight.py
efls-train/python/efl/example/secret_sharing_mnist/: follower.py  leader.py
efls-train/python/efl/framework/: __init__.py  common_define.py  communicator.py  context.py  dp_optimizer.py  hook_manager.py  model.py  sample.py  session_patch.py  stage.py  stage_combiner.py  stage_manager.py  task_scope.py
efls-train/python/efl/hooks/: logger_hook.py
efls-train/python/efl/model_fn/: optimizer_fn.py  procedure_fn.py
efls-train/python/efl/privacy/: compute_dp_sgd_privacy.py  dp_optimizer.py  encrypt.py  encrypt_layer.py  encryptor_utils.py  fixedpoint_tensor.py  gmpy_math.py  paillier.py  paillier_layer.py  paillier_tensor.py  secret_sharing.py
efls-train/python/efl/service_discovery/: service_discovery.py
efls-train/python/efl/stage/: complete.py  loop.py  model_bank.py
efls-train/python/efl/utils/: column_util.py  communicator_util.py  config.py  failover_patch.py  func_patcher.py  metrics.py  redirect_logging.py  slice_op.py
efls-train/test/: dataio_test.py  empty_test.py  federal_dataset_test.py  paillier_test.py  service_discovery_test.py
efls-train/tools/cert/: gen_crt.sh
efls-train/tools/cmd/train/: print_env.sh  start_federal_train.sh  start_non_federal_train.sh
(+181 files in other folders)
